--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-  <title>Something</title>
+  <title>SomeThing</title>
+  <meta charset="utf-16" />
   <link rel="stylesheet" href="style.css" />
-
 </head>
 
 <body>
@@ -12,11 +12,18 @@
     <h1>00:00</h1>
   </div>
   <form class="js-form form">
-    <input type="text" placeholder="what is your name?"/>
+    <input type="text" placeholder="What is your name?" />
   </form>
   <h4 class="js-greetings greetings"></h4>
+  <form class ="js-toDoForm">
+    <input type="text" placeholder="Write a to do" />
+  </form>
+  <ul class="js-toDoList">
+    
+  </ul>
   <script src="clock.js"></script>
-  <script src="greeting.js"></script>
+  <script src="gretting.js"></script>
+  <script src="todo.js"></script>
 </body>
 
 </html>
